--- a/src/main/webapp/WEB-INF/templates/user/list.html
+++ b/src/main/webapp/WEB-INF/templates/user/list.html
@@ -36,6 +36,7 @@
 <div class="form-group">
     <div class="col-sm-2 control-label">
         <a href="/toAdd" th:href="@{/toAdd}" class="btn btn-info">添加</a>
+        <a href="/" th:href="@{/admin}" class="btn btn-info">返回</a>
     </div>
 </div>
 
